@@ -1,5 +1,7 @@
 # Affinidi DID-Peer ChangeLog
 
+## See affinidi-did_resolver CHANGELOG
+
 ## Release 0.4.1 - 5th September 2024
 
 - Added Purpose Codes for did:peer:2
